kubernetes/catalog/dashy/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/A75G/docker-templates/master/templates/dashy.xml
# Category: Network-Web
# Stars: 198 | Downloads: 16050044
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: dashy
  labels:
    app.kubernetes.io/name: dashy
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: dashy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashy
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: dashy
          image: lissy93/dashy:latest
          ports:
            - containerPort: 8080
              protocol: TCP
              name: port
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: dashy-data-0
              mountPath: "/app/user-data/"
            - name: dashy-data-1
              mountPath: "/app/user-data/item-icons/"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: dashy-data-0
        persistentVolumeClaim:
          claimName: dashy-data-0
      - name: dashy-data-1
        persistentVolumeClaim:
          claimName: dashy-data-1
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
  labels:
    app.kubernetes.io/name: dashy
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: dashy
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: port
  type: ClusterIP
