kubernetes/catalog/dashy/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashy
  namespace: dashy
  labels:
    app.kubernetes.io/name: dashy
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashy.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: dashy
          port: 8080
  tls:
    secretName: int-rlservers-com-tls
